--- a/guias.html
+++ b/guias.html
@@ -40,16 +40,17 @@
                 <div class="col-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <h2 class="display mt-5 mb-4">Guías</h2>
 
-                    <p>El <a href="https://fau.uchile.cl/dam/jcr:3f7b4e53-cea0-48fe-9f31-8e1991e21d29/Dise%EF%BF%BDo_v4.pdf" target="_blank" class="link-dark">reglamento del plan de estudios</a> establece, originalmente, que:</p>
+                    <p>El <a href="https://fau.uchile.cl/dam/jcr:3f7b4e53-cea0-48fe-9f31-8e1991e21d29/Dise%EF%BF%BDo_v4.pdf" target="_blank" class="link-dark">reglamento del plan de estudios</a> establece que:</p>
 
                     <p class="mx-3 text-body-secondary small mb-2">[El trabajo tutelado de Seminario de Licenciatura se desarrolla] bajo <em>la dirección de</em> un(a) académico(a) con jerarquía de <em>Profesor(a) adscrito al Departamento de Diseño o a la Escuela de Pregrado</em> que haya desarrollado investigación relacionada con el tema abordado (Art. 9)</p>
 
                     <p class="mx-3 text-body-secondary small">[Para Profesor/a Guía de Proyecto de Título deben respetarse] los mismos criterios definidos en artículo 9 (Art 27).</p>
 
-                    <p>Por un <em>ajuste al reglamento</em> (solicitado por la Escuela de Pregrado al Decanato), queda que <em>tal dirección puede ser directa o indirecta</em>; este ajuste habilita a docentes que no cumplen con adscripción ni jerarquía a desempeñarse como co-guías.</p>
+                    <p>Debido a las horas docentes necesarias para atender a cada estudiante inscrita/o en ambos niveles de Seminario de Licenciatura y Proyecto de Título, se introduce la posibilidad de que la dirección reglamentada sea directa o indirecta; este ajuste habilita a docentes que no cumplen con adscripción ni jerarquía a colaborar como Profesores/as Guía 2, a condición de contar con un/a tutor/a que sí cumpla con las condiciones reglamentadas (a quien se le denominará Profesor/a Guía 1).</p>
 
-                    <p>Quienes se desempeñan como guías o co-guías en Seminario de Licenciatura (I o II), estarán aportando al segundo ciclo del plan de formación, con énfasis en EXPLORAR PARA INTERVENIR; y quienes lo hacen en Proyecto de Título (I o II), aportan al tercer y último ciclo: PROPONER PARA TRANSFORMAR.</p>
+                    <p>Quienes se desempeñen como <em>Profesor/a Guía en Seminario de Licenciatura (I o II)</em>, aportarán su labor docente al <em>segundo ciclo del plan de formación, con énfasis en EXPLORAR PARA INTERVENIR</em>. Aportarán, más específicamente, a las competencias relacionadas con <em>I Evaluar</em> y <em>IV Sistematizar</em> (ver ámbitos de desempeño en art. 34 del <a href="https://fau.uchile.cl/dam/jcr:3f7b4e53-cea0-48fe-9f31-8e1991e21d29/Dise%EF%BF%BDo_v4.pdf" target="_blank" class="link-dark">reglamento del plan de estudios</a>).</p> 
 
+                    <p>Quienes se desempeñen como <em>Profesor/a Guía en Proyecto de Título (I o II)</em>, aportarán su labor docente al <em>tercer y último ciclo: PROPONER PARA TRANSFORMAR</em>. Aportarán las competencias relacionadas con <em>I Evaluar</em>, <em>II Crear</em>, <em>III Gestionar</em> y <em>IV Sistematizar</em> (ver ámbitos de desempeño en art. 34 del <a href="https://fau.uchile.cl/dam/jcr:3f7b4e53-cea0-48fe-9f31-8e1991e21d29/Dise%EF%BF%BDo_v4.pdf" target="_blank" class="link-dark">reglamento del plan de estudios</a>).</p>
                 </div>
             </div>
         </div>
