--- a/comisiones.html
+++ b/comisiones.html
@@ -50,7 +50,7 @@
 
                     <p><em>Coordinación de Título colabora en las designaciones y propuestas que le corresponden a Jefatura de Carrera</em>.</p>
 
-                    <p>Al colaborar, la Coordinación atiende a disponibilidad horaria, mención, especialidad y énfasis de cada docente que participa de las <a href="guiaturas.html" class="link-dark">guiaturas</a>.</p>
+                    <p>Al colaborar, la Coordinación atiende a disponibilidad horaria, mención, especialidad y énfasis de cada docente que participa de las <a href="guias.html" class="link-dark">guiaturas</a>.</p>
 
                     <p>A continuación pueden consultarse las disponibilidades horarias junto con especialidad y énfasis declarados por 31 académicos(as) con jerarquía de Profesor y adscritos(as) al Departamento de Diseño y la Escuela de Pregrado:</p>
 
@@ -236,7 +236,7 @@
 
             //otras variables
 
-            Papa.parse("https://raw.githubusercontent.com/disenoUChile/guiatura/main/data/comisiones.csv", {
+            Papa.parse("https://raw.githubusercontent.com/disenoUChile/guiaturas/main/data/comisiones.csv", {
                 download: true,
                 header: true,
                 complete: function (results) {
