--- a/guias.html
+++ b/guias.html
@@ -46,7 +46,7 @@
 
                     <p class="mx-3 text-body-secondary small">[Para Profesor/a Guía de Proyecto de Título deben respetarse] los mismos criterios definidos en artículo 9 (Art 27).</p>
 
-                    <p>Debido a las horas docentes necesarias para atender a cada estudiante inscrita/o en ambos niveles de Seminario de Licenciatura y Proyecto de Título, se introduce la posibilidad de que la dirección reglamentada sea directa o indirecta; este ajuste habilita a docentes que no cumplen con adscripción ni jerarquía a colaborar como Profesores/as Guía 2, a condición de contar con un/a tutor/a que sí cumpla con las condiciones reglamentadas (a quien se le denominará Profesor/a Guía 1).</p>
+                    <p><em>Debido a las horas docentes necesarias para atender a cada estudiante inscrita/o en ambos niveles de Seminario de Licenciatura y Proyecto de Título, se introduce la posibilidad de que la dirección reglamentada sea directa o indirecta</em>; este ajuste habilita a docentes que no cumplen con adscripción ni jerarquía a colaborar como Profesores/as Guía 2, a condición de contar con un/a tutor/a que sí las cumpla (a quien se le denominará Profesor/a Guía 1).</p>
 
                     <p>Quienes se desempeñen como <em>Profesor/a Guía en Seminario de Licenciatura (I o II)</em>, aportarán su labor docente al <em>segundo ciclo del plan de formación, con énfasis en EXPLORAR PARA INTERVENIR</em>. Aportarán, más específicamente, a las competencias relacionadas con <em>I Evaluar</em> y <em>IV Sistematizar</em> (ver ámbitos de desempeño en art. 34 del <a href="https://fau.uchile.cl/dam/jcr:3f7b4e53-cea0-48fe-9f31-8e1991e21d29/Dise%EF%BF%BDo_v4.pdf" target="_blank" class="link-dark">reglamento del plan de estudios</a>).</p> 
 
