--- a/portada.html
+++ b/portada.html
@@ -64,8 +64,7 @@
                                                     <div class="col-8 col-md-9">
                                                         <p class="m-0 p-0 small">
                                                             UNIVERSIDAD DE CHILE<br />
-                                                            Facultad de Arquitectura y Urbanismo<br />
-                                                            Escuela de Pregrado
+                                                            <p id="institucion">Nombre de la institución a la que se pone en consideración la memoria</p>
                                                         </p>
                                                     </div>
                                                 </div>
@@ -115,7 +114,7 @@
                                     <td class="text-center">
                                         <p>
                                             SANTIAGO DE CHILE<br />
-                                            2023<!--<span id="year"></span>-->
+                                            2024
                                         </p>
                                     </td>
                                 </tr>
@@ -257,9 +256,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
         <script>
-            let d = new Date();
-            let year = d.getFullYear();
-            //document.querySelector("#year").innerHTML = `${year}`;
 
             function printDiv(divName) {
                 var printContents = document.getElementById(divName).innerHTML;
@@ -273,6 +269,7 @@
             }
 
             document.getElementById("input").addEventListener("click", function () {
+
                 let nombreCompleto =
                     document.querySelector('input[name="nombres"]').value.toUpperCase() +
                     " " +
@@ -290,6 +287,12 @@
                     nombreGuia = leGuia.replace("PROFESOR", "PROFESOR GUÍA<br>");
                 }
 
+                if(document.querySelector('select[name="optar"]').value.includes("Licenciad")){
+                    document.querySelector("#institucion").innerHTML = "Facultad de Arquitectura y Urbanismo<br/>Departamento de Diseño"
+                } else {
+                    document.querySelector("#institucion").innerHTML = "Facultad de Arquitectura y Urbanismo<br/>Escuela de Pregrado"
+                }
+
                 document.querySelector("#titulando").innerHTML = document.querySelector('textarea[name="titular"]').value;
 
                 document.querySelector("#optando").innerHTML = document.querySelector('select[name="optar"]').value;
@@ -297,6 +300,7 @@
                 document.querySelector("#nombrando").innerHTML = nombreCompleto;
 
                 document.querySelector("#guiando").innerHTML = nombreGuia;
+
             });
         </script>
     </body>
