--- a/index.html
+++ b/index.html
@@ -1,86 +1,95 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#1f5592" />
-        <meta name="author" content="Felipe Alberto Cortez Orellana" />
-        <title>DISEÑO — GUIATURAS</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-        <link href="style.css" rel="stylesheet" />
-    </head>
-    <body class="bg-light">
-        <nav class="fixed-top bg-light" style="opacity: 0.95;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                        <div class="row align-items-center">
-                            <div class="col-6 py-3">
-                                <h1 class="float-start fs-6 m-0 p-0">DISEÑO — GUIATURAS</h1>
-                            </div>
-                            <div class="col-6 py-3">
-                                <select class="form-select form-select-sm w-75 float-end m-0 py-1 px-2" onchange="location = this.value;">
-                                    <option value="#">MENÚ</option>
-                                    <option value="index.html" selected>Abecé</option>
-                                    <option value="comisiones.html">Comisiones</option>                                    
-                                    <option value="evaluaciones.html">Evaluaciones</option>
-                                    <option value="guias.html">Guías</option>
-                                    <option value="memorias.html">Memorias</option>
-
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#1f5592" />
+    <meta name="author" content="Felipe Alberto Cortez Orellana" />
+    <title>DISEÑO — GUIATURAS</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body class="bg-light">
+    <nav class="fixed-top bg-light" style="opacity: 0.95;">
+      <div class="container">
+        <div class="row">
+          <div class="col-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
+            <div class="row align-items-center">
+              <div class="col-6 py-3">
+                <h1 class="float-start fs-6 m-0 p-0">DISEÑO — GUIATURAS</h1>
+              </div>
+              <div class="col-6 py-3">
+                <select class="form-select form-select-sm w-75 float-end m-0 py-1 px-2" onchange="location = this.value;">
+                  <option value="#">MENÚ</option>
+                  <option value="index.html" selected>Abecé</option>
+                  <option value="comisiones.html">Comisiones</option>
+                  <option value="evaluaciones.html">Evaluaciones</option>
+                  <option value="guias.html">Guías</option>
+                  <option value="memorias.html">Memorias</option>
+                </select>
+              </div>
             </div>
-        </nav>
-
-        <div class="container pt-5">
-            <div class="row">
-                <div class="col-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    <h2 class="display mt-5 mb-4">Abecé</h2>
-
-                    <p>Si se revisa el <a href="https://fau.uchile.cl/estudiantes/informacion-sobre-las-carreras/reglamentos" class="link-dark" target="_blank">Decreto Universitario N° 0053924, de fecha 20 de diciembre de 2018</a>, pronto se aprende que, por reglamento, <em>a la Jefatura de Carrera le corresponden las decisiones clave en el proceso de obtención de Licenciatura y Título Profesional.</em></p>
-
-                    <p><em>La Coordinación de Título colabora con la Jefatura de Carrera</em>, y su colaboración se extiende, desde los trabajos tutelados de Proyecto de Título, a los de Seminario de Licenciatura.</p> 
-
-                    <p>Para contactar a Coordinación, puede escribir a &lt;<a href="mailto:coordinacion.titulo.diseno@uchilefau.cl" class="link-dark">coordinacion.titulo.diseno@uchilefau.cl</a>&gt;. Si usted es estudiante, por favor escriba a Coordinación con copia a su Profesor/a Guía.</p>
-
-                    <p>Cada estudiante contará con su <a href="guias.html" class="link-dark">Profesor/a Guía</a> <em>después de activar su matrícula e inscribir, en el semestre en curso, la sección de la asignatura</em> de Seminario de Licenciatura I, Seminario de Licenciatura II, Proyecto de Título I o Proyecto de Título II <em>que le corresponda</em>.</p>
-
-                    <p>Las fechas para las entregas de los trabajos de estudiantes con Profesor/a Guía se encuentran en el calendario académico oficial de cada semestre. Tales fechas deben ser respetadas.</p> 
-
-                    <p>El calendario académico, junto con lo relacionado a formatos de <a href="memorias.html" class="link-dark">informe final de Seminario o memoria para Examen de Título</a> y los procedimientos que correspoden a cada <a href="evaluaciones.html" class="link-dark">evaluación</a>, deben ser entregada a cada estudiante por su Profesor/a Guía.</p> 
-
-                </div>
-            </div>
+          </div>
         </div>
-
-        <div class="pt-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                        <p class="small d-flex justify-content-between align-items-center text-body-secondary">
-                            <span><span class="d-none d-lg-inline">Desarrollado por </span><a href="https://faco.cl/profesor/" target="_blank" class="link-secondary" title="Felipe Alberto Cortez Orellana">FACO</a></span>
-                            <span><a href="mailto:coordinacion.titulo.diseno@uchilefau.cl" class="link-secondary">coordinacion.titulo.diseno@uchilefau.cl</a></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
+      </div>
+    </nav>
+    <div class="container pt-5">
+      <div class="row">
+        <div class="col-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
+          <h2 class="display mt-5 mb-4">Abecé</h2>
+          <div id="aviso"></div>
+          <p>Si se revisa el <a href="https://fau.uchile.cl/estudiantes/informacion-sobre-las-carreras/reglamentos" class="link-dark" target="_blank">Decreto Universitario N° 0053924, de fecha 20 de diciembre de 2018</a>, pronto se aprende que, por reglamento, <em>a la Jefatura de Carrera le corresponden las decisiones clave en el proceso de obtención de Licenciatura y Título Profesional.</em>
+          </p>
+          <p>
+            <em>La Coordinación de Título colabora con la Jefatura de Carrera</em>, y su colaboración se extiende, desde los trabajos tutelados de Proyecto de Título, a los de Seminario de Licenciatura.
+          </p>
+          <p>Para contactar a Coordinación, puede escribir a &lt;<a href="mailto:coordinacion.titulo.diseno@uchilefau.cl" class="link-dark">coordinacion.titulo.diseno@uchilefau.cl</a>&gt;. Si usted es estudiante, por favor escriba a Coordinación con copia a su Profesor/a Guía. </p>
+          <p>Cada estudiante contará con su <a href="guias.html" class="link-dark">Profesor/a Guía</a>
+            <em>después de activar su matrícula e inscribir, en el semestre en curso, la sección de la asignatura</em> de Seminario de Licenciatura I, Seminario de Licenciatura II, Proyecto de Título I o Proyecto de Título II <em>que le corresponda</em>.
+          </p>
+          <p>Los hitos ya marcados en el calendario académico del semestre, junto con los formatos de <a href="memorias.html" class="link-dark">informe final de Seminario o memoria para Examen de Título</a> y los procedimientos de <a href="evaluaciones.html" class="link-dark">evaluación</a>, deben ser informados a cada estudiante por su Profesor/a Guía. </p>
         </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <script>
-            document.addEventListener("scroll", (event) => {
-                document.querySelector("nav").classList.add("shadow-sm");
-            });
-
-            document.addEventListener("scrollend", (event) => {
-                var y = window.scrollY;
-                if (y == 0) {
-                    document.querySelector("nav").classList.remove("shadow-sm");
-                }
-            });
-        </script>
-    </body>
+      </div>
+    </div>
+    <div class="pt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
+            <p class="small d-flex justify-content-between align-items-center text-body-secondary">
+              <span>
+                <span class="d-none d-lg-inline">Desarrollado por </span>
+                <a href="https://faco.cl/profesor/" target="_blank" class="link-secondary" title="Felipe Alberto Cortez Orellana">FACO</a>
+              </span>
+              <span>
+                <a href="mailto:coordinacion.titulo.diseno@uchilefau.cl" class="link-secondary">coordinacion.titulo.diseno@uchilefau.cl</a>
+              </span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script>
+      // INICIO DEL AVISO (HASTA EL 15/04/2024)
+      async function aviso() {
+        const consulta = await fetch("https://disenouchile.github.io/guiaturas/aviso.txt");
+        const data = await consulta.text();
+        if (data) {
+          document.querySelector("#aviso").innerHTML = data;
+        }
+      }
+      aviso().catch((error) => console.error(error));
+      // FIN DEL AVISO (HASTA EL 15/04/2024)
+      
+      document.addEventListener("scroll", (event) => {
+        document.querySelector("nav").classList.add("shadow-sm");
+      });
+      document.addEventListener("scrollend", (event) => {
+        var y = window.scrollY;
+        if (y == 0) {
+          document.querySelector("nav").classList.remove("shadow-sm");
+        }
+      });
+    </script>
+  </body>
 </html>
