--- a/evaluaciones.html
+++ b/evaluaciones.html
@@ -37,7 +37,10 @@
         <div class="container pt-5">
             <div class="row">
                 <div class="col-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    <h2 class="display mt-5 mb-0">Evaluaciones</h2>
+                    <h2 class="display mt-5 mb-4">Evaluaciones</h2>
+
+          <div id="aviso"></div>
+
 
                     <h3 class="fs-5 mt-4 mb-3">Seminario de Licenciatura I</h3>
 
@@ -109,6 +112,18 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <script>
+      // INICIO DEL AVISO (HASTA EL 15/04/2024)
+      async function aviso() {
+        const consulta = await fetch("https://disenouchile.github.io/guiaturas/aviso.txt");
+        const data = await consulta.text();
+        if (data) {
+          document.querySelector("#aviso").innerHTML = data;
+        }
+      }
+      aviso().catch((error) => console.error(error));
+      // FIN DEL AVISO (HASTA EL 15/04/2024)
+
+
             document.addEventListener("scroll", (event) => {
                 document.querySelector("nav").classList.add("shadow-sm");
             });
