--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <p>Cada estudiante contará con su <a href="guias.html" class="link-dark">Profesor/a Guía</a>
             <em>después de activar su matrícula e inscribir, en el semestre en curso, la sección de la asignatura</em> de Seminario de Licenciatura I, Seminario de Licenciatura II, Proyecto de Título I o Proyecto de Título II <em>que le corresponda</em>.
           </p>
-          <p>Los hitos ya marcados en el calendario académico del semestre, junto con los formatos de <a href="memorias.html" class="link-dark">informe final de Seminario o memoria para Examen de Título</a> y los procedimientos de <a href="evaluaciones.html" class="link-dark">evaluación</a>, deben ser informados a cada estudiante por su Profesor/a Guía. </p>
+          <p>Los hitos ya marcados en el <a href="https://disenouchile.github.io/guiaturas/calendario-2024-1.pdf" target="_blank" class="link-dark">calendario académico del semestre</a>, junto con los formatos de <a href="memorias.html" class="link-dark">informe final de Seminario o memoria para Examen de Título</a> y los procedimientos de <a href="evaluaciones.html" class="link-dark">evaluación</a>, deben ser informados a cada estudiante por su Profesor/a Guía. </p>
         </div>
       </div>
     </div>
