--- a/comisiones.html
+++ b/comisiones.html
@@ -49,7 +49,7 @@
 
                     <p class="mx-3 text-body-secondary small">[Para el Proyecto de Título II la] comisión examinadora <em>será designada por el (la) Decano(a) a propuesta del Jefe(a) de Carrera y el(la) Director(a) de la Escuela de Pregrado</em>. Estará compuesta por el Decano(a) o en quien delegue el ejercicio de dicha facultad (quien presidirá la comisión), el (la) profesor(a) guía y dos académicos(as), de jerarquía profesor del Departamento de Diseño o la Escuela de Pregrado (Art.29).</p>
 
-                    <p><em>Coordinación de Título colabora en las designaciones y propuestas que le corresponden a Jefatura de Carrera</em>. Al colaborar, la Coordinación atiende a disponibilidad horaria, mención, especialidad y énfasis declarados por académicas(as), de jerarquía profesor del Departamento de Diseño o la Escuela de Pregrado.</p>
+                    <p><em>Coordinación de Título colabora en las designaciones y propuestas que le corresponden a Jefatura de Carrera</em>. Al colaborar, la Coordinación atiende a disponibilidad horaria, mención, especialidad y énfasis declarados por cada académico(a).</p>
 
                     <p>A continuación se despliega un ejemplo de los datos que atiende la Coordinación de Título (los datos del ejemplo corresponde a disponibilidades de segundo semestre 2023).</p>
 
