--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
             <em>La Coordinación de Título colabora con la Jefatura de Carrera</em>, y su colaboración se extiende, desde los trabajos tutelados de Proyecto de Título, a los de Seminario de Licenciatura.
           </p>
           <p>Para contactar a Coordinación, puede escribir a &lt;<a href="mailto:coordinacion.titulo.diseno@uchilefau.cl" class="link-dark">coordinacion.titulo.diseno@uchilefau.cl</a>&gt;. Si usted es estudiante, por favor escriba a Coordinación con copia a su Profesor/a Guía. </p>
-          <p>Cada estudiante contará con su <a href="guias.html" class="link-dark">Profesor/a Guía</a>
-            <em>después de activar su matrícula e inscribir, en el semestre en curso, la sección de la asignatura</em> de Seminario de Licenciatura I, Seminario de Licenciatura II, Proyecto de Título I o Proyecto de Título II <em>que le corresponda</em>.
+          <p>Cada estudiante contará con su Profesor/a Guía <em>después de activar su matrícula e inscribir la sección de la asignatura</em> de Seminario de Licenciatura I, Seminario de Licenciatura II, Proyecto de Título I o Proyecto de Título II <em>que le corresponda</em>.
           </p>
-          <p>Los hitos ya marcados en el <a href="https://disenouchile.github.io/guiaturas/calendario-2024-1.pdf" target="_blank" class="link-dark">calendario académico del semestre</a>, junto con los formatos de <a href="memorias.html" class="link-dark">informe final de Seminario o memoria para Examen de Título</a> y los procedimientos de <a href="evaluaciones.html" class="link-dark">evaluación</a>, deben ser informados a cada estudiante por su Profesor/a Guía. </p>
+          <p>Los hitos ya marcados en el <a href="https://disenouchile.github.io/guiaturas/calendario-2024-1.pdf" target="_blank" class="link-dark">calendario académico del semestre</a>, junto con los formatos de <a href="memorias.html" class="link-dark">informe final de Seminario o memoria para Examen de Título</a> y los procedimientos de <a href="evaluaciones.html" class="link-dark">evaluación</a>, deben ser informados a cada estudiante por su <a href="guias.html" class="link-dark">Profesor/a Guía</a>. </p>
         </div>
       </div>
     </div>
