--- a/memorias.html
+++ b/memorias.html
@@ -370,12 +370,11 @@
                         <a href="https://repositorio.uchile.cl/" target="_blank" class="link-dark">Repositorio</a>.
                     </p>
                     <p>
-                        Es importante saber que
-                        <em>la Biblioteca no archivos de informes ni memorias que puedan ser enviadas directamente por estudiantes o Profesoras/es Guía</em>. Las recibe desde la Secretaría que corresponda.
+                        Es importante saber que <em>la Biblioteca no recibe material enviado directamente por estudiantes o Profesoras/es Guía</em>. Lo recibe cuando es enviado desde la Secretaría que corresponda:
                     </p>
                     <ul>
-                        <li>Los informes finales de Seminario de Licenciatura deben ser enviados a Biblioteca desde la Secretaría del Departamento de Diseño.</li>
-                        <li>Las memorias y documentación anexa para Examen de Título deben ser enviadas a Biblioteca desde la Secretaría de Escuela de Pregrado.</li>
+                        <li>Los informes finales de Seminario de Licenciatura II deben ser enviados a la Biblioteca desde la Secretaría del Departamento de Diseño.</li>
+                        <li>Las memorias y documentación anexa para Examen de Título deben ser enviadas a la Biblioteca desde la Secretaría de Escuela de Pregrado.</li>
                     </ul>
 
                     <p>
