--- a/guias.html
+++ b/guias.html
@@ -136,8 +136,7 @@
                                 <div class="card shadow-sm h-100">
                                   <div class="card-header">
                                     <h1 class="fs-5 mt-2">${nombre(d.name)}</h1>
-                                    <p>Jerarquía: ${d.nivel}<br/>
-                                    Adscripción: ${d.adscripcion}</p>
+                                    <p>${d.nivel} ${d.adscripcion}</p>
                                     <p>${link(d.perfil)}</p>
                                   </div>
                                   <ul class="list-group list-group-flush">
